# luabackend

./: Makefile.am  OBJECTFILES  README  README.md  dnssec.cc  lua_functions.cc  lua_getvaluefromtable.hh  lua_prefixes.cc  lua_prefixes.hh  luabackend.cc  luabackend.hh  master.cc  minimal.cc  private.cc  reload.cc  slave.cc  supermaster.cc
test/: dig  one  pdns  pdns.conf  powerdns-Files-To-Load.lua  powerdns-luabackend.lua  powerdns-minimal.lua
test/Domains/: 2.0.192.in-addr.arpa.lua  8.b.d.0.1.0.0.2.ip6.arpa.lua  test.example.lua  test2.example.lua  tlmc.content.example.lua  tlmc.csp.example.lua  tlmc.isp.example.lua  toecdn.csp.example.lua  toecdn.isp.example.lua
test/Modes/: tlmc.isp.example.lua
test/Prefixes/: Prefixes.lua
test/Rediscover/: tlmc.isp.example.lua  toecdn.isp.example.lua
